[gd_scene load_steps=25 format=3 uid="uid://qsc1p3jienqa"]

[ext_resource type="Texture2D" uid="uid://drc80ivmf4eee" path="res://bg_wechat.png" id="1_pjypn"]
[ext_resource type="Script" path="res://main.gd" id="2_thuqy"]
[ext_resource type="Texture2D" uid="uid://bwaks80kihqpa" path="res://green_button05.png" id="3_4ycjt"]
[ext_resource type="Texture2D" uid="uid://dyy6a1u4v6g3t" path="res://grey_button05.png" id="4_j8vba"]
[ext_resource type="Texture2D" uid="uid://uat6j6hlawt4" path="res://Res/UI/72×72_bottomless_frame.png" id="4_qkxfv"]
[ext_resource type="Texture2D" uid="uid://dfwn542bm7p78" path="res://Res/UI/72×4_bottom.png" id="5_3itt8"]
[ext_resource type="Texture2D" uid="uid://dv41sp56cs8ss" path="res://Res/UI/72×72_empty_frame.png" id="6_kij2g"]
[ext_resource type="Script" path="res://avatar.gd" id="6_uww3v"]
[ext_resource type="Texture2D" uid="uid://dfcxljhp56jr0" path="res://grab.png" id="7_88i0k"]
[ext_resource type="Texture2D" uid="uid://hc6tkkw02o1e" path="res://walk.png" id="7_w0hse"]

[sub_resource type="LabelSettings" id="LabelSettings_l8m2l"]
font_color = Color(0.00119745, 0.00119745, 0.00119744, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke7y6"]
atlas = ExtResource("7_88i0k")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3e4f"]
atlas = ExtResource("7_88i0k")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sikv"]
atlas = ExtResource("7_88i0k")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nurg"]
atlas = ExtResource("7_88i0k")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7nw"]
atlas = ExtResource("7_88i0k")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo2c2"]
atlas = ExtResource("7_w0hse")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vti32"]
atlas = ExtResource("7_w0hse")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrj5g"]
atlas = ExtResource("7_w0hse")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewl7n"]
atlas = ExtResource("7_w0hse")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_5jayf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke7y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3e4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nurg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7nw")
}],
"loop": true,
"name": &"hang",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo2c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vti32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrj5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewl7n")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_fv08b"]
font_size = 18
font_color = Color(0.000333904, 0.000333904, 0.000333904, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5ijkg"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_py683"]
font_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Sprite2D" node_paths=PackedStringArray("avatar", "bottom", "content", "newLineMine", "newLineYours")]
position = Vector2(-960, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("1_pjypn")
centered = false
script = ExtResource("2_thuqy")
avatar = NodePath("Control/Content/FirstLine/TextureRect/Avatar")
bottom = NodePath("Control/Content/FirstLine/TextureRect/Bottom")
content = NodePath("Control/Content")
newLineMine = NodePath("Control/Content/NewLineMine")
newLineYours = NodePath("Control/Content/NewLineYours")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 55.0
offset_top = 64.0
offset_right = 274.0
offset_bottom = 797.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect2" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect3" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect4" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect5" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect6" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect7" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect8" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect9" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect10" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect11" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect12" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect13" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect14" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect15" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect16" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect17" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect18" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect19" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect20" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect21" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect22" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect23" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="TextureRect24" type="TextureRect" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_j8vba")

[node name="Button2" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 680.0
offset_top = 64.0
offset_right = 746.0
offset_bottom = 95.0
text = "REPLAY"

[node name="TextEdit" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 298.0
offset_top = 677.0
offset_right = 823.0
offset_bottom = 787.0
theme_override_colors/background_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/caret_background_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
caret_type = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="Button" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 833.0
offset_top = 755.0
offset_right = 941.0
offset_bottom = 791.0

[node name="Content" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TapLabel" type="Label" parent="Control/Content"]
layout_mode = 0
offset_left = 538.0
offset_top = 213.0
offset_right = 650.0
offset_bottom = 236.0
text = "你拍了拍火柴人"
label_settings = SubResource("LabelSettings_l8m2l")

[node name="FirstLine" type="TextureRect" parent="Control/Content"]
layout_mode = 0
offset_left = 671.0
offset_top = 153.0
offset_right = 861.0
offset_bottom = 198.0
texture = ExtResource("3_4ycjt")

[node name="TextureRect" type="TextureRect" parent="Control/Content/FirstLine"]
layout_mode = 0
offset_left = 198.0
offset_top = -16.0
offset_right = 270.0
offset_bottom = 56.0
texture = ExtResource("4_qkxfv")

[node name="Bottom" type="TextureRect" parent="Control/Content/FirstLine/TextureRect"]
layout_mode = 0
offset_left = -2.0
offset_top = 67.0
offset_right = 74.0
offset_bottom = 71.0
texture = ExtResource("5_3itt8")

[node name="Avatar" type="AnimatedSprite2D" parent="Control/Content/FirstLine/TextureRect"]
position = Vector2(35, 40)
scale = Vector2(0.56, 0.58)
sprite_frames = SubResource("SpriteFrames_5jayf")
animation = &"hang"
script = ExtResource("6_uww3v")

[node name="Label" type="Label" parent="Control/Content/FirstLine"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 31.0
text = "你好呀，小伙伴"
label_settings = SubResource("LabelSettings_fv08b")

[node name="NewLineMine" type="TextureRect" parent="Control/Content"]
layout_mode = 0
offset_left = 594.0
offset_top = 513.5
offset_right = 862.0
offset_bottom = 558.5
texture = ExtResource("3_4ycjt")

[node name="TextureRect" type="TextureRect" parent="Control/Content/NewLineMine"]
layout_mode = 0
offset_left = 276.0
offset_top = -16.0
offset_right = 348.0
offset_bottom = 56.0
texture = ExtResource("6_kij2g")

[node name="Label" type="Label" parent="Control/Content/NewLineMine"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 51.0
offset_bottom = 31.0
label_settings = SubResource("LabelSettings_5ijkg")

[node name="NewLineYours" type="TextureRect" parent="Control/Content"]
layout_mode = 0
offset_left = 360.0
offset_top = 572.0
offset_right = 555.0
offset_bottom = 621.0
texture = ExtResource("4_j8vba")

[node name="TextureRect" type="TextureRect" parent="Control/Content/NewLineYours"]
layout_mode = 0
offset_left = -68.0
offset_top = -9.0
offset_right = 4.0
offset_bottom = 63.0
texture = ExtResource("6_kij2g")

[node name="Label" type="Label" parent="Control/Content/NewLineYours"]
layout_mode = 0
offset_left = 26.0
offset_top = 13.0
offset_right = 138.0
offset_bottom = 36.0
text = "发生什么事了？"
label_settings = SubResource("LabelSettings_py683")

[node name="DebugLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 551.0
offset_top = 284.5
offset_right = 906.0
offset_bottom = 349.5

[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="text_set" from="Control/TextEdit" to="." method="_on_text_edit_text_set"]
[connection signal="pressed" from="Control/Button" to="." method="_on_text_edit_text_set"]
